hphp/test/zend/good/ext/simplexml/tests/017.php.skipif
<?php if (!extension_loaded("simplexml")) print "skip"; ?>