hphp/test/zend/bad/ext/gd/tests/001.php.skipif
<?php if (!function_exists("imagecreatefrompng")) print "skip"; ?>